# cookiecutter-doge

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml  tox.ini
.github/: dependabot.yaml
.github/workflows/: ci.yml
docs/: index.md  project-generation-options.md  requirements.txt  user-guide.md
tests/: test_cookiecutter_generation.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Makefile  README.md  environment.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  deploy.yaml  plan.yaml
{{cookiecutter.project_slug}}/terraform/deploy/app/prod/: backend.tf  main.tf
{{cookiecutter.project_slug}}/terraform/deploy/app/stage/: backend.tf  main.tf
{{cookiecutter.project_slug}}/terraform/deploy/base/: backend.tf  main.tf
{{cookiecutter.project_slug}}/terraform/deploy/meta/: backend.tf  main.tf  vars.tfvars
